# ml

./: .gitignore  LICENSE  README.md  da.py  housing.ipynb  metrics.py  models.py  ps1.ipynb  ps1.py  pyproject.toml  utils.py
models/: __init__.py  gda.py  linear_regression.py  locally_weighted_linear_regression.py  poisson_regression.py
notebooks/: lwlr.ipynb
scripts/: ps1.py
src/: utils.py
src/metrics/: __init__.py
src/models/: __about__.py  __init__.py  base.py  locally_weighted_linear_regression.py  logistic_regression.py
tests/: conftest.py  test_gda.py  test_linear_regression.py  test_locally_weighted_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_models.py  test_poisson_regression.py
