[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-models-learning"
version = "0.1.0"
description = "Educational NumPy implementations of classic ML models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Mohammed Ahmed", email = "mhmdgapper@gmail.com" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
